--- a/css/responsive.css
+++ b/css/responsive.css
@@ -14,6 +14,7 @@
     }
     #conteudo {
         border-radius: initial;
+        padding: 2%;
     }
     #conteudo .extra {
         margin: 5% 5%;
@@ -46,6 +47,7 @@
     }
     #conteudo {
         border-radius: initial;
+        padding: 2%;
     }
     #conteudo .extra {
         margin: 5% 5%;
