--- a/css/responsive.css
+++ b/css/responsive.css
@@ -2,6 +2,10 @@
     body {
         font-size: 0.8em;
     }
+    #cabecalho h1 {
+        letter-spacing: 0.1em;
+        margin: 6% auto 4%;
+    }
     #conteudo {
         margin: auto;
         font-size: 1.2em;
@@ -11,6 +15,7 @@
     }
     #cabecalho #nav ul {
         margin: auto 2%;
+        gap: 0%;
     }
     #conteudo {
         border-radius: initial;
@@ -18,6 +23,9 @@
     }
     #conteudo .extra {
         margin: 5% 5%;
+    }
+    #conteudo .historia .imagem.android {
+        width: 90%;
     }
     #conteudo .historia iframe {
         margin: 3% auto;
@@ -36,6 +44,11 @@
     body {
         font-size: 1.25em;
     }
+    #cabecalho h1 {
+        letter-spacing: 0.1em;
+        font-size: 2.5em;
+        margin: 3.5% auto 2%;
+    }
     #conteudo {
         margin: auto;
     }
@@ -44,6 +57,7 @@
     }
     #cabecalho #nav ul {
         margin: auto 5%;
+        gap: 0;
     }
     #conteudo {
         border-radius: initial;
