--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,7 @@
 @charset 'UTF-8';
 
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
+
 @font-face {
     font-family: 'android';
     src: url(../fontes/idroid.otf) format(opentype);
@@ -7,8 +9,13 @@
 
 /* A mente do site */
 
+:root {
+    --fonte-padrao: Arial, Verdana, Helvetica, sans-serif;
+    --fonte-destaque: 'Bebas Neue', sans-serif;
+    --fonte-android: 'android';
+}
 body {
-    font: 1.7em Arial, sans-serif;
+    font: 1.7em var(--fonte-padrao);
     background-color: #84E1AD;
     margin: 0;
     max-width: 100%;
@@ -21,6 +28,7 @@ html {
 strong {
     color: #3BD27F;
 }
+
 /* O corpo do site */
 /* E o seu cabeçalho */
 
@@ -31,6 +39,12 @@ strong {
     text-align: center;
     padding-top: 1%;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.493);
+}
+#cabecalho h1 {
+    font-family: var(--fonte-destaque);
+    letter-spacing: 0.06em;
+    font-size: 2.2em;
+    margin: 2% auto;
 }
 #cabecalho h4 {
     color: #bcffda;
@@ -79,18 +93,18 @@ strong {
 #conteudo a {
     color: #20603D;
     text-decoration: none;
-    transition-duration: .6s;
+    transition-duration: .4s;
 }
 #conteudo a:hover {
     color: #84E1AD;
-    transition-duration: .6s;
+    transition-duration: .4s;
 }
 #conteudo a:active {
     color: #bcffda;
     transition-duration: .2s;
 }
 #conteudo .historia h2, #conteudo .historia h3 {
-    font-family: 'android';
+    font-family: var(--fonte-android);
     color: #20603D;
     background-image: linear-gradient(90deg, #bcffda, white);
     padding-left: 1%;
@@ -102,7 +116,7 @@ strong {
 #conteudo .historia img{
     margin: 3% auto;
     height: auto;
-    width: 40%;
+    width: 50%;
     display: flex;
     align-items: center;
 }
