--- a/css/style.css
+++ b/css/style.css
@@ -35,7 +35,7 @@ strong {
 #cabecalho {
     color: white;
     background-image: linear-gradient(180deg, #3BD27F, #195B38);
-    background-attachment: fixed;
+    height: 100%;
     text-align: center;
     padding-top: 1%;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.493);
