--- a/css/style.css
+++ b/css/style.css
@@ -39,6 +39,7 @@ strong {
     text-align: center;
     padding-top: 1%;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.493);
+    text-shadow: 2px 2px 0px rgba(0, 0, 0, 0.137);
 }
 #cabecalho h1 {
     font-family: var(--fonte-destaque);
