--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,43 +1,14 @@
-@charset 'UTF-8';
-
-@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
-
-@font-face {
-    font-family: 'android';
-    src: url(../fontes/idroid.otf) format(opentype);
-}
+@charset "UTF-8";
 
 /* A mente do site */
-
-:root {
-    --fonte-padrao: Arial, Verdana, Helvetica, sans-serif;
-    --fonte-destaque: 'Bebas Neue', sans-serif;
-    --fonte-android: 'android';
-
-    --verde-clara-1: #bcffda;
-    --verde-clara-2: #84E1AD;
-    --verde-neutra: #3BD27F;
-    --verde-escura: #195B38;
-    --cinza-escura: #222222;
-}
-:focus {
-    outline: 0;
-}
 body {
     font: 1.7em var(--fonte-padrao);
-    background-color: var(--verde-clara-2);
-    margin: 0;
     max-width: 100%;
     height: auto;
     text-align: justify;
 }
-html {
-    scroll-behavior: smooth;
-}
 
-/* O corpo do site */
-/* E o seu cabeçalho */
-
+/* Cabeçalho */
 #cabecalho {
     color: white;
     background-image: linear-gradient(180deg, var(--verde-neutra), var(--verde-escura));
@@ -91,11 +62,10 @@ html {
 }
 
 /* O conteúdo do site */
-
 #conteudo {
     background-color: white;
     margin: 3% 10%;
-    padding: 1%;
+    padding: 2.5% 2%;
     border-radius: 10px;
     box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.411);
     line-height: 2em;
@@ -106,7 +76,6 @@ html {
 }
 #conteudo a {
     color: var(--verde-escura);
-    text-decoration: none;
     transition-duration: .4s;
 }
 #conteudo a:focus-visible {
@@ -128,12 +97,14 @@ html {
     background-color: var(--verde-clara-1);
     padding: 0.1em;
 }
-#conteudo .historia h2, #conteudo .historia h3 {
+#conteudo .historia h2,
+#conteudo .historia h3 {
     font-family: var(--fonte-android);
     text-align: left;
     color: var(--verde-escura);
     background-image: linear-gradient(90deg, var(--verde-clara-1), white);
     padding-left: 1%;
+    margin-bottom: 1%;
     text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.137);
 }
 #conteudo .historia h3 {
@@ -143,14 +114,20 @@ html {
     text-indent: 5%;
     margin: auto 1% 2%;
 }
-#conteudo .historia .imagem.android{
+#conteudo .historia img,
+#conteudo .historia iframe {
+    animation: reveal 1s ease-in-out both;
+    animation-timeline: view();
+    animation-range: entry 25% cover 40%;
+}
+#conteudo .historia .imagem.android {
     margin: 3% auto;
     height: auto;
     max-width: 350px;
     display: flex;
     align-items: center;
 }
-#conteudo .historia .imagem img{
+#conteudo .historia .imagem img {
     margin: 3% auto;
     width: 80%;
     height: auto;
@@ -180,6 +157,9 @@ html {
     flex-direction: column;
     box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.144);
     border-radius: 16px 5px;
+    animation: esquerda 1s ease-out;
+    animation-timeline: view();
+    animation-range: cover -10% cover 25%;
 }
 #conteudo .extra strong {
     background-color: var(--verde-escura);
@@ -194,6 +174,7 @@ html {
 }
 #conteudo .extra div h3 {
     font-size: 1.3em;
+    padding: 0.8em;
 }
 #conteudo .extra article {
     background-color: var(--verde-clara-1);
@@ -224,12 +205,11 @@ html {
 }
 
 /* O rodapé do site */
-
 #rodape {
     background-color: var(--verde-escura);
     color: white;
     text-align: center;
-    padding: 1.5% 4% 1%;
+    padding: 1em 2em;
 }
 
 #rodape #topo {
@@ -237,6 +217,7 @@ html {
     background-color: rgba(0, 0, 0, 0.315);
     font-size: 2em;
     padding: 0.5%;
+    margin-bottom: 0.2em;
     transition-duration: .4s;
 }
 #rodape #topo:hover,
@@ -251,7 +232,6 @@ html {
 }
 
 #rodape a {
-    text-decoration: none;
     color: var(--verde-clara-2);
     transition-duration: .2s;
 }
@@ -269,4 +249,5 @@ html {
 
 #rodape p {
     line-height: 1.5em;
+    margin-top: 0.4em;
 }
