--- a/src/css/style.css
+++ b/src/css/style.css
@@ -116,6 +116,7 @@ body {
 }
 #conteudo .historia img,
 #conteudo .historia iframe {
+    border-radius: 3px;
     animation: reveal 1s ease-in-out both;
     animation-timeline: view();
     animation-range: entry 25% cover 40%;
